# pong

./: .gitignore  Cargo.toml
shaders/: .ninja_log  build.ninja  text.frag.spv  text.vert.spv  triangle.frag.spv  triangle.vert.glsl  triangle.vert.spv
shaders/src/: text.frag.glsl  text.vert.glsl  triangle.frag.glsl
slotmap/: Cargo.toml
slotmap/src/: lib.rs
src/: font.rs  main.rs
src/ffi/: linux.rs  mod.rs  vk.rs  xcb.rs
src/gfx/: loader.rs  material.rs  mod.rs  scene.rs  sprite.rs
src/window/: mod.rs  xcb.rs
