[package]
name = "thyrox"
version = "0.1.0"
authors = ["Usman Zahid <usmanzahid1998@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
freetype = "0.7.0"
png = "0.16.8"
slotmap = { path = "slotmap" }

[workspace]
members = ["slotmap"]